@@ -23,9 +23,11 @@ import net.mcreator.element.GeneratableElement;
 import net.mcreator.element.ModElementType;
 import net.mcreator.element.ModElementTypeLoader;
 import net.mcreator.element.parts.MItemBlock;
+import net.mcreator.element.parts.TabEntry;
 import net.mcreator.element.types.*;
 import net.mcreator.element.types.interfaces.ICommonType;
 import net.mcreator.element.types.interfaces.IItemWithTexture;
+import net.mcreator.element.types.interfaces.ITabContainedElement;
 import net.mcreator.generator.GeneratorWrapper;
 import net.mcreator.generator.mapping.MappableElement;
 import net.mcreator.workspace.Workspace;
@@ -37,20 +39,10 @@ import org.apache.logging.log4j.Logger;
 
 import java.nio.charset.StandardCharsets;
 import java.util.*;
-import java.util.stream.Collectors;
 
-@SuppressWarnings("unused") public class WorkspaceInfo {
+@SuppressWarnings("unused") public record WorkspaceInfo(Workspace workspace) {
 
 	private static final Logger LOG = LogManager.getLogger("Workspace info");
-
-	private final Workspace workspace;
-
-	private final GeneratorWrapper internalWrapper;
-
-	public WorkspaceInfo(Workspace workspace) {
-		this.workspace = workspace;
-		this.internalWrapper = new GeneratorWrapper(workspace.getGenerator());
-	}
 
 	public boolean hasVariables() {
 		return workspace.getVariableElements().size() > 0;
@@ -98,7 +90,7 @@ import java.util.stream.Collectors;
 		Set<MappableElement.Unique> retval = new HashSet<>();
 		for (T t : input) {
 			if (t.getUnmappedValue().startsWith("CUSTOM:")) {
-				if (workspace.getModElementByName(internalWrapper.getElementPlainName(t.getUnmappedValue())) != null) {
+				if (workspace.getModElementByName(GeneratorWrapper.getElementPlainName(t.getUnmappedValue())) != null) {
 					retval.add(new MappableElement.Unique(t));
 				} else {
 					LOG.warn("Broken reference found. Referencing non-existent element: " + t.getUnmappedValue()
@@ -117,8 +109,7 @@ import java.util.stream.Collectors;
 
 	public List<ModElement> getElementsOfType(ModElementType<?> type) {
 		try {
-			return workspace.getModElements().parallelStream().filter(e -> e.getType() == type)
-					.collect(Collectors.toList());
+			return workspace.getModElements().parallelStream().filter(e -> e.getType() == type).toList();
 		} catch (IllegalArgumentException e) {
 			LOG.warn("Failed to list elements of non-existent type", e);
 			return Collections.emptyList();
@@ -128,12 +119,8 @@ import java.util.stream.Collectors;
 	public List<ModElement> getRecipesOfType(String typestring) {
 		try {
 			return workspace.getModElements().parallelStream().filter(e -> e.getType() == ModElementType.RECIPE)
-					.filter(e -> {
-						GeneratableElement ge = e.getGeneratableElement();
-						if (ge instanceof Recipe)
-							return ((Recipe) ge).recipeType.equals(typestring);
-						return false;
-					}).collect(Collectors.toList());
+					.filter(e -> e.getGeneratableElement() instanceof Recipe re && re.recipeType.equals(typestring))
+					.toList();
 		} catch (IllegalArgumentException e) {
 			LOG.warn("Failed to list elements of non-existent type", e);
 			return Collections.emptyList();
@@ -169,82 +156,172 @@ import java.util.stream.Collectors;
 	}
 
 	public boolean hasGameRulesOfType(String type) {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.GAMERULE) {
-				if (element.getGeneratableElement() instanceof GameRule gr)
+				if (element.getGeneratableElement() instanceof GameRule gr) {
 					if (gr.type.equalsIgnoreCase(type))
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasVillagerTrades(boolean wandering) {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.VILLAGERTRADE) {
-				if (element.getGeneratableElement() instanceof VillagerTrade vt)
+				if (element.getGeneratableElement() instanceof VillagerTrade vt) {
 					if (vt.hasVillagerTrades(wandering))
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasBlocksMineableWith(String tool) {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.BLOCK) {
-				if (element.getGeneratableElement() instanceof Block block)
+				if (element.getGeneratableElement() instanceof Block block) {
 					if (block.destroyTool.equalsIgnoreCase(tool))
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasToolsOfType(String type) {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.TOOL) {
-				if (element.getGeneratableElement() instanceof Tool tool)
+				if (element.getGeneratableElement() instanceof Tool tool) {
 					if (tool.toolType.equalsIgnoreCase(type))
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasFluidsOfType(String type) {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.FLUID) {
-				if (element.getGeneratableElement() instanceof Fluid fluid)
+				if (element.getGeneratableElement() instanceof Fluid fluid) {
 					if (fluid.type.equalsIgnoreCase(type))
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasBiomesWithStructure(String type) {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.BIOME) {
-				if (element.getGeneratableElement() instanceof Biome biome)
+				if (element.getGeneratableElement() instanceof Biome biome) {
 					if (biome.hasStructure(type))
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasFuels() {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.ITEMEXTENSION) {
-				if (element.getGeneratableElement() instanceof ItemExtension itemExtension)
+				if (element.getGeneratableElement() instanceof ItemExtension itemExtension) {
 					if (itemExtension.enableFuel)
 						return true;
+				}
 			}
+		}
 		return false;
 	}
 
 	public boolean hasCompostableItems() {
-		for (ModElement element : workspace.getModElements())
+		for (ModElement element : workspace.getModElements()) {
 			if (element.getType() == ModElementType.ITEMEXTENSION) {
-				if (element.getGeneratableElement() instanceof ItemExtension itemExtension)
+				if (element.getGeneratableElement() instanceof ItemExtension itemExtension) {
 					if (itemExtension.compostLayerChance > 0)
 						return true;
+				}
 			}
+		}
+		return false;
+	}
+
+	public boolean hasBiomesInVanillaDimensions() {
+		for (ModElement element : workspace.getModElements()) {
+			if (element.getType() == ModElementType.BIOME) {
+				if (element.getGeneratableElement() instanceof Biome biome) {
+					if (biome.spawnBiome || biome.spawnInCaves || biome.spawnBiomeNether)
+						return true;
+				}
+			}
+		}
+		return false;
+	}
+
+	public boolean hasItemsInTabs() {
+		List<GeneratableElement> elementsList = workspace.getModElements().stream()
+				.map(ModElement::getGeneratableElement).filter(Objects::nonNull).toList();
+
+		for (GeneratableElement element : elementsList) {
+			if (element instanceof ITabContainedElement tabElement) {
+				TabEntry tab = tabElement.getCreativeTab();
+				if (tab != null && !tab.getUnmappedValue().equals("No creative tab entry")) {
+					if (!tabElement.getCreativeTabItems().isEmpty())
+						return true;
+				}
+			}
+		}
+
+		return false;
+	}
+
+	public Map<String, List<MItemBlock>> getCreativeTabMap() {
+		List<GeneratableElement> elementsList = workspace.getModElements().stream()
+				.sorted(Comparator.comparing(ModElement::getSortID)).map(ModElement::getGeneratableElement)
+				.filter(Objects::nonNull).toList();
+
+		Map<String, List<MItemBlock>> tabMap = new HashMap<>();
+
+		for (GeneratableElement element : elementsList) {
+			if (element instanceof ITabContainedElement tabElement) {
+				TabEntry tabEntry = tabElement.getCreativeTab();
+				if (tabEntry != null) {
+					String tab = tabEntry.getUnmappedValue();
+					if (tab != null && !tab.equals("No creative tab entry")) {
+						if (!tabMap.containsKey(tab)) {
+							tabMap.put(tab, new ArrayList<>());
+						}
+
+						tabMap.get(tab).addAll(tabElement.getCreativeTabItems().stream()
+								.map(e -> new MItemBlock(workspace, e.getName())).toList());
+					}
+				}
+			}
+		}
+
+		return tabMap;
+	}
+
+	public boolean hasItemsInVanillaTabs(Map<String, List<MItemBlock>> creativeTabMap) {
+		for (String tab : creativeTabMap.keySet()) {
+			if (!tab.startsWith("CUSTOM:")) {
+				return true;
+			}
+		}
+		return false;
+	}
+
+	public boolean hasItemsInCustomTabs(Map<String, List<MItemBlock>> creativeTabMap) {
+		for (String tab : creativeTabMap.keySet()) {
+			if (tab.startsWith("CUSTOM:")) {
+				return true;
+			}
+		}
 		return false;
 	}
 
@@ -255,5 +332,4 @@ import java.util.stream.Collectors;
 	public Workspace getWorkspace() {
 		return workspace;
 	}
-
 }
